crates/plotnik-lib/tests/03-analyze/alternations/mixed_nested_in_node.txt
Q = (call
  [
    A: (a)
    (b)
  ]
)
==== diagnostics ====
error: cannot mix labeled and unlabeled branches
 --> query.ptk:4:5
  |
3 |     A: (a)
  |     - tagged branch here
4 |     (b)
  |     ^^^
  |
help: use all labels for a tagged union, or none for a merged struct
==== symbols ====
Q
